# Neural-Network

./: CMakeLists.txt  Makefile  README.md
src/: adam.cpp  adam.h  common.cpp  common.h  dataset.cpp  dataset.h  layer.cpp  layer.h  linkedList.cpp  linkedList.h  main.cpp  misc.cpp  misc.h  network.cpp  network.h  neuron.cpp  neuron.h
src/nn/: network.h
src/nn/data/: array.h  dense_matrix.h  include.h  input_data.h  tensor.h
src/nn/layers/: activation.h  affine.h  include.h  input.h  layer.h
src/nn/loss/: include.h  loss.h  mae.h  mse.h
src/nn/optimizer/: adam.h  include.h  optimizer.h  sgd.h
src/nnetwork/: activation.cpp  activation.h  adam.cpp  adam.h  layer.cpp  layer.h  network.cpp  network.h  neuron.cpp  neuron.h
